[project]
name = "agent-assignment-multilang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "litellm>=1.72.0",
    "openai-agents>=0.0.16",
]
